--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "dependencies": {
     "aos": "^3.0.0-beta.6",
     "boxicons": "^2.1.4",
+    "firebase": "^10.6.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-awesome-button": "^7.0.5",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.10.1",
     "typed.js": "^2.1.0"
   },
   "devDependencies": {
