--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.8.7",
     "aos": "^3.0.0-beta.6",
+    "axios": "^1.6.2",
     "boxicons": "^2.1.4",
     "firebase": "^10.6.0",
+    "keep-react": "^1.0.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
