--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.0",
     "@tanstack/react-query": "^5.8.7",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.6.2",
@@ -24,7 +26,9 @@
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
+    "react-share": "^5.0.3",
     "sort-by": "^1.2.0",
+    "stripe": "^14.5.0",
     "sweetalert2": "^11.10.1",
     "typed.js": "^2.1.0"
   },
